WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105392
[EFL] regression(
r138071
) Add mission functions for build fix
https://bugs.webkit.org/show_bug.cgi?id=105392
Summary
[EFL] regression(r138071) Add mission functions for build fix
KyungTae Kim
Reported
2012-12-18 23:05:36 PST
r138071
add new functions in WebCore/platform/LocalizedStrings.cpp, but EFL port doesn't use it. So, add that functions to WebCore/platform/efl/LocalizedStringsEfl.cpp
Attachments
Patch
(1.75 KB, patch)
2012-12-18 23:08 PST
,
KyungTae Kim
no flags
Details
Formatted Diff
Diff
Patch
(1.75 KB, patch)
2012-12-18 23:16 PST
,
KyungTae Kim
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
KyungTae Kim
Comment 1
2012-12-18 23:08:36 PST
Created
attachment 180095
[details]
Patch
Ryosuke Niwa
Comment 2
2012-12-18 23:15:43 PST
Comment on
attachment 180095
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=180095&action=review
> Source/WebCore/ChangeLog:9 > + So, add that functions to LocalizedStringsEfl.cpp
add “those” functions.
KyungTae Kim
Comment 3
2012-12-18 23:16:59 PST
Created
attachment 180100
[details]
Patch
WebKit Review Bot
Comment 4
2012-12-18 23:34:06 PST
Comment on
attachment 180100
[details]
Patch Clearing flags on attachment: 180100 Committed
r138120
: <
http://trac.webkit.org/changeset/138120
>
WebKit Review Bot
Comment 5
2012-12-18 23:34:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug