[EFL] regression(r138071) Add mission functions for build fix https://bugs.webkit.org/show_bug.cgi?id=105392

Unreviewed build fix.

r138071 add new functions to LocalizedStrings.cpp, but EFL port doesn't use them.
So, add those functions to LocalizedStringsEfl.cpp

Patch by KyungTae Kim <ktf.kim@samsung.com> on 2012-12-18

* platform/efl/LocalizedStringsEfl.cpp:
(WebCore):
(WebCore::textTrackClosedCaptionsText):
(WebCore::textTrackSubtitlesText):
(WebCore::textTrackOffText):
(WebCore::textTrackNoLabelText):

Canonical link: https://commits.webkit.org/123622@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138120 268f45cc-cd09-0410-ab3c-d52691b4dbfc